# outlook-extension-de

./: CLAUDE.md  README.md
.claude-plugin/: marketplace.json
dxt/: manifest.json
obsidian/: .mcp.json
obsidian-dxt/: README.md  manifest.json
obsidian-dxt/server/: index.js
obsidian/.claude-plugin/: plugin.json
outlook/: pyproject.toml
outlook/src/outlook_mcp/: outlook.py  outlook_mac.py
outlook/tests/: test_locale.py
scripts/: build-dxt.sh
