[project]
name = "outlook-mcp"
version = "0.1.0"
description = "MCP server exposing Microsoft Outlook (desktop) to Claude — Windows via COM, macOS via AppleScript"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.2.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
outlook-mcp = "outlook_mcp.server:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outlook_mcp"]
